force-app/main/default/objects/Product__c/fields/GTIN__c.field-meta.xml
<CustomField>
    <fullName>GTIN__c</fullName>
    <label>GTIN</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>