force-app/main/default/objects/Product__c/fields/Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Count__c</fullName>
    <label>Product Count</label>
    <type>AutoNumber</type>
</CustomField>