force-app/main/default/objects/Product__c/fields/Product_Increment__c.field-meta.xml
<CustomField>
    <fullName>Product_Increment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>